// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`log should not write to scope "test-scope" 1`] = `""`;

exports[`log should write to scope "resolve:*" (log,error,warn,debug,info,verbose) (resolve:*) 1`] = `
"1970-01-01T00:00:00.000Z resolve:storage [37mLOG[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [37mLOG[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [37mLOG[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [31m[7mERROR[27m[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [31m[7mERROR[27m[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [31m[7mERROR[27m[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [33m[7mWARN[27m[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [33m[7mWARN[27m[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [33m[7mWARN[27m[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [37mDEBUG[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [37mDEBUG[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [37mDEBUG[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [32mINFO[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [32mINFO[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [32mINFO[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [37mVERBOSE[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [37mVERBOSE[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [37mVERBOSE[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [37mLOG[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [37mLOG[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [37mLOG[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [31m[7mERROR[27m[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [31m[7mERROR[27m[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [31m[7mERROR[27m[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [33m[7mWARN[27m[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [33m[7mWARN[27m[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [33m[7mWARN[27m[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [37mDEBUG[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [37mDEBUG[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [37mDEBUG[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [32mINFO[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [32mINFO[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [32mINFO[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [37mVERBOSE[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [37mVERBOSE[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [37mVERBOSE[39m <no-correlation-id> { a: { b: { c: [Object] } } }
"
`;

exports[`log should write to scope "resolve:cloud:lambda:environment:my-test" (log,error) 1`] = `
"1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <no-correlation-id> { a: { b: { c: [Object] } } }
"
`;

exports[`log should write to scope "resolve:cloud:lambda:environment:my-test" (log,error,warn,debug,info) 1`] = `
"1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [33m[7mWARN[27m[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [33m[7mWARN[27m[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [33m[7mWARN[27m[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mDEBUG[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mDEBUG[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mDEBUG[39m <no-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [32mINFO[39m <no-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [32mINFO[39m <no-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [32mINFO[39m <no-correlation-id> { a: { b: { c: [Object] } } }
"
`;

exports[`log with correlationId should not write to scope "test-scope" 1`] = `""`;

exports[`log with correlationId should write to scope "resolve:*" (log,error,warn,debug,info,verbose) (resolve:*) 1`] = `
"1970-01-01T00:00:00.000Z resolve:storage [37mLOG[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [37mLOG[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [37mLOG[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [31m[7mERROR[27m[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [31m[7mERROR[27m[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [31m[7mERROR[27m[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [33m[7mWARN[27m[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [33m[7mWARN[27m[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [33m[7mWARN[27m[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [37mDEBUG[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [37mDEBUG[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [37mDEBUG[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [32mINFO[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [32mINFO[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [32mINFO[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:storage [37mVERBOSE[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:storage [37mVERBOSE[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:storage [37mVERBOSE[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [37mLOG[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [37mLOG[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [37mLOG[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [31m[7mERROR[27m[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [31m[7mERROR[27m[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [31m[7mERROR[27m[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [33m[7mWARN[27m[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [33m[7mWARN[27m[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [33m[7mWARN[27m[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [37mDEBUG[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [37mDEBUG[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [37mDEBUG[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [32mINFO[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [32mINFO[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [32mINFO[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:bus [37mVERBOSE[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:bus [37mVERBOSE[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:bus [37mVERBOSE[39m <test-correlation-id> { a: { b: { c: [Object] } } }
"
`;

exports[`log with correlationId should write to scope "resolve:cloud:lambda:environment:my-test" (log,error) 1`] = `
"1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <test-correlation-id> { a: { b: { c: [Object] } } }
"
`;

exports[`log with correlationId should write to scope "resolve:cloud:lambda:environment:my-test" (log,error,warn,debug,info) 1`] = `
"1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mLOG[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [31m[7mERROR[27m[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [33m[7mWARN[27m[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [33m[7mWARN[27m[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [33m[7mWARN[27m[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mDEBUG[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mDEBUG[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [37mDEBUG[39m <test-correlation-id> { a: { b: { c: [Object] } } }

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [32mINFO[39m <test-correlation-id> test text

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [32mINFO[39m <test-correlation-id> 42

1970-01-01T00:00:00.000Z resolve:cloud:lambda:environment:my-test [32mINFO[39m <test-correlation-id> { a: { b: { c: [Object] } } }
"
`;
